--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 languageCode: vi-vn
 copyright: This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
-title: 12bit.vn
+title: OnePercent+
 description: Write and share to learn
 theme: blog
 enableGitInfo: true
